# ai-website-extractor

./: .gitignore  README.md  app.py  debugging.py  pyproject.toml
src/: extraction.py  formatter.py  models.py  scraper.py
tests/: test_extraction.py  test_formatter.py  test_scraper.py
